@@ -54,6 +54,8 @@
     <Compile Include="src\UserData.cs" />
     <Compile Include="src\com\robotacid\util\HiddenInt.cs" />
     <Compile Include="src\cs\AppRand.cs" />
+    <Compile Include="src\cs\SSprite.cs" />
+    <Compile Include="src\Library.cs" />
   </ItemGroup>
   <ItemGroup>
     <ShaderProgram Include="shaders\Simple.fcg" />
@@ -70,6 +72,7 @@
     <Folder Include="src\com\" />
     <Folder Include="src\com\robotacid\" />
     <Folder Include="src\com\robotacid\util\" />
+    <Folder Include="src\assets\" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedShaderProgram Include="lib\SimpleSprite.fcg" />
@@ -77,5 +80,10 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="lib\DebugFont.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="src\assets\banner.png" />
+    <Content Include="src\assets\banner-complete.png" />
+    <Content Include="src\assets\banner-fail.png" />
   </ItemGroup>
 </Project>
