@@ -1,3 +1,8 @@
+2013-07-04  tasogare66 <tasogare66@gmail.com>
+
+	* red-rogue-cs:
+	解像度変更、タイトル表示対応
+
 2013-07-02  tasogare66 <tasogare66@gmail.com>
 
 	* red-rogue-cs:
